--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
-name = "CoNCMOR"
-uuid = "3a989f29-cff0-4f1c-87be-5dcdd41bd240"
+name = "CoNCMOR2"
+uuid = "50aebffa-baed-41d1-9332-446be8fba04e"
 authors = ["Petr Krysl <pkrysl@ucsd.edu>"]
 version = "0.1.0"
 
